# Met-767-Machine-Learning-Final-Project

./: Cargo.toml  README.md
crates/scraper/: Cargo.toml
crates/scraper/src/: lib.rs
crates/split_to_json/: Cargo.toml
crates/split_to_json/src/: lib.rs
data/3_formatting/2_training/: 100_split.json  1895_split.json  259_split.json  409_split.json  89_split.json
python/clustering/: BERT Clustering Bills.ipynb  clustering.py  pyproject.toml
python/clustering/.ipynb_checkpoints/: BERT Clustering Bills-checkpoint.ipynb
python/formatting/: formatterHtml.py  formatterMD.py  formatterRun.py  formatterTraining.py  pyproject.toml
python/formatting/.ipynb_checkpoints/: BERT Example - Congress Data-checkpoint.ipynb
src/: main.rs
